deployments/helm-charts/wso2-agent-manager/tmp/manifests.yaml
---
# Source: wso2-agent-manager/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.1.0
    helm.sh/chart: postgresql-18.1.13
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
---
# Source: wso2-agent-manager/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql-hl
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.1.0
    helm.sh/chart: postgresql-18.1.13
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: wso2-agent-manager/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.1.0
    helm.sh/chart: postgresql-18.1.13
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: wso2-agent-manager/templates/agent-manager-service/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amp-internal-api
  labels:
    helm.sh/chart: wso2-agent-manager-0.0.0-dev
    app.kubernetes.io/name: wso2-agent-manager
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.0-dev"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: agent-manager-service
spec:
  type: LoadBalancer
  ports:
    - port: 9243
      targetPort: 9243
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: wso2-agent-manager
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: agent-manager-service
---
# Source: wso2-agent-manager/templates/agent-manager-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amp-api
  labels:
    helm.sh/chart: wso2-agent-manager-0.0.0-dev
    app.kubernetes.io/name: wso2-agent-manager
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.0-dev"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: agent-manager-service
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: wso2-agent-manager
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: agent-manager-service
---
# Source: wso2-agent-manager/templates/console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amp-console
  labels:
    helm.sh/chart: wso2-agent-manager-0.0.0-dev
    app.kubernetes.io/name: wso2-agent-manager
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.0-dev"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: console
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: wso2-agent-manager
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: console
---
# Source: wso2-agent-manager/templates/agent-manager-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amp-api
  labels:
    helm.sh/chart: wso2-agent-manager-0.0.0-dev
    app.kubernetes.io/name: wso2-agent-manager
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.0-dev"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: agent-manager-service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wso2-agent-manager
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: agent-manager-service
  template:
    metadata:
      annotations:
        checksum/config: 87c6426c051adace527003851e7f926cce33f9aa5cb02f1f97fee8d18af988cc
        checksum/secret: f5afc6b2dc9e175546a07fcb5210e5f32d501a645e9c3a846b1ca6967f4072ec
      labels:
        app.kubernetes.io/name: wso2-agent-manager
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: agent-manager-service
    spec:
      
      serviceAccountName: agent-management-platform
      securityContext:
        fsGroup: 1000
      containers:
        - name: agent-manager-service
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          image: "ghcr.io/wso2/amp-api:0.0.0-dev"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 9243
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: jwt-keys
              mountPath: /app/keys
              readOnly: true
            - name: certificates
              mountPath: /app/data/certs
              readOnly: true
      volumes:
        - name: jwt-keys
          secret:
            secretName: amp-jwt-keys
            defaultMode: 0440
            optional: true
        - name: certificates
          secret:
            secretName: amp-tls-certs
            defaultMode: 0440
            optional: false
---
# Source: wso2-agent-manager/templates/console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amp-console
  labels:
    helm.sh/chart: wso2-agent-manager-0.0.0-dev
    app.kubernetes.io/name: wso2-agent-manager
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.0-dev"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wso2-agent-manager
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: console
  template:
    metadata:
      annotations:
        checksum/config: dc423437ba1c7dda259f373434ca31b6d23e15969883071fea8cb1b01fd3b70a
      labels:
        app.kubernetes.io/name: wso2-agent-manager
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: console
    spec:
      
      containers:
        - name: console
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          image: "ghcr.io/wso2/amp-console:0.0.0-dev"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-tmp
              mountPath: /tmp
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
---
# Source: wso2-agent-manager/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.1.0
    helm.sh/chart: postgresql-18.1.13
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: release-name-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: release-name-postgresql
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 18.1.0
        helm.sh/chart: postgresql-18.1.13
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: release-name-postgresql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: registry-1.docker.io/bitnami/postgresql:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "agentmanager" -d "dbname=agentmanager" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "agentmanager" -d "dbname=agentmanager" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: postgresql-password
              mountPath: /opt/bitnami/postgresql/secrets/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: postgresql-password
          secret:
            secretName: release-name-postgresql
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "10Gi"
